--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.508" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/confirmBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
